@@ -38,6 +38,7 @@ dependencyManagement {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile 'org.springframework.boot:spring-boot-starter-redis'
+	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
 		compile('org.springframework.boot:spring-boot-starter-web')
 		compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 		compile('com.h2database:h2')
