@@ -1,7 +1,7 @@
 package org.anyio.b2c.boot;
 
-import org.anyio.b2c.domain.Customer;
-import org.anyio.b2c.repository.CustomerRepository;
+import org.anyio.b2c.domain.jpa.Customer;
+import org.anyio.b2c.repository.jpa.CustomerRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
