@@ -32,3 +32,7 @@ spring.redis.pool.min-idle: 0
 spring.redis.pool.max-active: 8
 spring.redis.pool.max-wait: -1
 
+# mongo config
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=ecserver_dev
