@@ -19,7 +19,8 @@ complex query by Querydsl
 - 0.0.2-SNAPSHOT
 redis cache support
 redis pub/sub support
+simple mongodb support
 
-mongodb support
 rest api design
 product and order
+spring security support
